# ForenSight

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  MinerU_markdown_AI大模型驱动的智能博弈财务舞弊识别系统构建_2019761835000545280.md  README.md  app.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/plans/: 2026-02-07-github-standards-hardening.md  2026-02-09-github-open-source-secret-sanitization.md
docs/security/: open-source-safety-checklist.md
outputs/: .gitkeep  final_report.json  workpaper.json
outputs/agent_reports/: base.json  defense.json  fraud_type_A.json  fraud_type_B.json
outputs/run_1770382905/: final_report.json  workpaper.json
outputs/run_1770383408/: workpaper.json
outputs/run_1770383449/: final_report.json  workpaper.json
outputs/run_1770385550/: workpaper.json
outputs/run_1770385697/: final_report.json  workpaper.json
outputs/run_1770386736/: workpaper.json
outputs/run_1770387386/: final_report.json
outputs/run_1770387575/: workpaper.json
outputs/run_1770388031/: workpaper.json
outputs/run_1770388228/: workpaper.json
outputs/run_1770388379/: final_report.json  workpaper.json
outputs/run_1770389025/: workpaper.json
outputs/run_1770389389/: final_report.json  workpaper.json
outputs/run_1770390107/: final_report.json  (+1 more)
scripts/: sanitize_git_history.sh  scan_secrets.sh
src/: __init__.py  agents.py  config.py  financials.py  llm_client.py  orchestrator.py  pdf_loader.py  ratio_calculator.py  run_logger.py  summarizer.py  tavily_client.py  token_utils.py  web_app.py  workpaper.py
static/: app.js  styles.css
templates/: index.html
tests/: test_agents.py  test_financials.py  test_financials_parallel.py  test_llm_client.py  test_orchestrator.py  test_pdf_loader.py  test_project_standards.py  test_summarizer.py  test_token_utils.py  test_webapp.py  test_workpaper.py
(+130 files in other folders)
